--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon --no-node-snapshot app.js"
+    "dev": "nodemon --no-node-snapshot app.js",
+    "start": "node --no-node-snapshot app.js"
   },
   "author": "",
   "license": "ISC",
